--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -1,5 +1,5 @@
 public class HelloWorld {
     public static void exibirMsgm() {
-        System.debug('Hello World');
+        System.debug('Hello World, my friend!');
     }
 }
